[BLUM-30] alert events implementation
